# http/api_router_manager.go
@@ -7,6 +7,17 @@ import (
 
 func ManagerApiRoutes(api *gin.RouterGroup) {
 
+
+	user := api.Group("/users")
+	{
+		user.GET("/", controllers.GetUsers)
+		user.POST("/", controllers.CreateUser)
+		user.GET("/:id", controllers.GetUserByID)
+		user.PUT("/:id", controllers.UpdateUserByID)
+		user.DELETE("/:id", controllers.DeleteUserByID)
+	}
+
+
 	measure := api.Group("/measures")
 	{
 		measure.GET("/", controllers.GetMeasures)
@@ -14,6 +25,25 @@ func ManagerApiRoutes(api *gin.RouterGroup) {
 		measure.GET("/:id", controllers.GetMeasureByID)
 		measure.PUT("/:id", controllers.UpdateMeasureByID)
 		measure.DELETE("/:id", controllers.DeleteMeasureByID)
+	}
+
+
+	category := api.Group("/categories")
+	{
+		category.GET("/", controllers.GetCategories)
+		category.POST("/", controllers.CreateCategory)
+		category.GET("/:id", controllers.GetCategoryByID)
+		category.PUT("/:id", controllers.UpdateCategoryByID)
+		category.DELETE("/:id", controllers.DeleteCategoryByID)
+	}
+
+	size := api.Group("/sizes")
+	{
+		size.GET("/", controllers.GetSizes)
+		size.POST("/", controllers.CreateSize)
+		size.GET("/:id", controllers.GetSizeByID)
+		size.PUT("/:id", controllers.UpdateSizeByID)
+		size.DELETE("/:id", controllers.DeleteSizeByID)
 	}
 
 }
